added flag content button.  Added images used for icons in submission.  Adjusted bundle id to match submission bundle id.

--- a/Audio-Mobile/Audio-Mobile-Info.plist
+++ b/Audio-Mobile/Audio-Mobile-Info.plist
@@ -15,24 +15,17 @@
 			<key>CFBundleIconFiles</key>
 			<array>
 				<string>icon.png</string>
+				<string>AM-ICONAPPSTORE-72.png</string>
+				<string>AM-ICONAPPSTORE-120.png</string>
+				<string>AM-ICONAPPSTORE-152.png</string>
+				<string>AM-ICONAPPSTORE-76.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<false/>
 		</dict>
-		<key>UINewsstandIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string></string>
-			</array>
-			<key>UINewsstandBindingEdge</key>
-			<string>UINewsstandBindingEdgeLeft</string>
-			<key>UINewsstandBindingType</key>
-			<string>UINewsstandBindingTypeMagazine</string>
-		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>org.audio-mobile.prototype</string>
+	<string>org.audiomobile.ios</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
